--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,9 +1,9 @@
 .home-page {
   background-color: #0f1c2e;
   min-height: 100vh;
-  padding-top: 70px; 
-}
+  padding-top: 70px;
 
-.content-sections {
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  overflow-x: visible;
 }
